...
        android:layout_height="match_parent">

        <include android:id="@+id/error_message" layout="@layout/error_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
        <ProgressBar
            android:visibility="gone"
            android:id="@+id/progress_bar"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
...

        <ScrollView
        android:id="@+id/content"
        android:visibility="gone"
        android:layout_width="0dp"
...

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
...
                    android:layout_height="wrap_content"

                    android:id="@+id/iv_backdrop_image"
                    app:imageUrl="@{details.getBackdropPath()}"
                    android:scaleType="fitXY"
...

                <ImageView
                    android:id="@+id/iv_close_detail_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                app:layout_constraintBottom_toTopOf="@id/tv_label_release_year"

                >
...

                <ImageView
                    android:id="@+id/iv_imdb_rating"
                    android:visibility="@{details.getImdbRating == null ? View.GONE : View.VISIBLE}"
                    android:layout_width="50dp"
...

                <TextView
                    android:id="@+id/tv_imdb_rating"
                    android:visibility="@{details.getImdbRating == null ? View.GONE : View.VISIBLE}"
                    android:layout_width="wrap_content"
...
                    android:textAppearance="@style/TextAppearance.Qfilm.Body1"

                    app:layout_constraintBottom_toTopOf="@id/tv_label_runtime"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/tv_release_year"
                    app:layout_constraintTop_toBottomOf="@id/ll_ratings"

...


                    app:layout_constraintBaseline_toBaselineOf="@+id/tv_runtime"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_label_release_year"
                    app:layout_constraintBottom_toTopOf="@id/tv_label_genres"
                    />

...
                    app:layout_constraintTop_toBottomOf="@id/tv_label_runtime"
                    app:layout_constraintBottom_toTopOf="@id/btn_trailer"
                    app:layout_constraintEnd_toStartOf="@id/tv_genres"

                    />
...

                app:layout_constraintTop_toBottomOf="@+id/tv_label_genres"
                app:layout_constraintBottom_toTopOf="@id/divider_line">

                <ImageView
                    android:id="@+id/iv_btn_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/tv_btn_trailer"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/watch_trailer"
                    android:textAppearance="@style/TextAppearance.Qfilm.label"
                    android:textColor="?attr/colorOnBackground" />
...

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/btn_add_to"
                style="?attr/buttonStyle"
                android:layout_width="wrap_content"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_overview_headline"/>

            <TextView
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_images_headline">

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rv_images"
                />

...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_posters_headline"/>


...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rv_posters"
                />

...
