...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv_error_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="You are offline"
        android:textAppearance="?attr/textAppearanceHeadline2"

        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_error_description"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_error_description"
        android:text="You have to be connected to internet to browse LGBTQ movies and series."
        android:textAppearance="?attr/textAppearanceBody2"
...

        android:layout_marginBottom="16dp"

        app:layout_constraintTop_toBottomOf="@id/tv_error_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_try_again"/>


    <Button
        style="?attr/buttonStyle"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
...
