...
    <string name="item_already_added">%1$s already added to %2$s</string>

    <!-- Common error layout -->

    <string name="error_no_network_headline">You are offline</string>
    <string name="error_no_network_message">You have to be connected to internet to browse LGBTQ movies &amp; series</string>
    <string name="error_unknown_heading">Unknown network error occurred"</string>
    <string name="error_unknown_message">We are very sorry about this, please try again</string>
    <string name="btn_try_again">Try again</string>

    <!-- CollectionFragment  -->

    <string name="tv_heading_empty_collection">Empty collection</string>
    <string name="tv_empty_collection">Add movies &amp; series by visiting their detail page</string>
...
